	changed #else by #elseif, added #else
	flash9 : optimized Hash,IntHash,StringBuf (use typed value)
	Reflect.field/setField/callMethod , Type.enumIndex and StringBuf methods are now inlined
	optimized haxe.Md5 : don't use statics
	allow up to 8 parameters in Reflect.createInstance
	flash9 : some minor optimizations in haxe.Serializer
	added haxe.io package (removed things from neko.io)
	TODO read/write int31+int32

2008-04-05: 1.19
	fixed flash9 Array.toString
	fixed inline return bug
	added haxe.rtti.Generic behavior
	added haxe.FastList
	bugfix to prevent recursive anonymous
	fixed some incorrectly reported "recursive inline" errors
	fixes in genas3 + genswf9 for Dynamic/* in methods
	{} is now an empty object and not an empty block
	fixed some verify errors left in flash9
	fixed private/protected differences in gen-hx-classes
	genswf9 : allowed to store a Class in a typed register
	fixed switch-on-bool (don't use matching)
	genswf9 : optimized switch on ints
	some renames in haxe.rtti.Type
	added flash.utils.TypedDictionary for F9
	genswf9 : fixe debug filename with inline code
	fixed completion for packages starting with 'a' or 'z'
	added flash9.Lib.as
	prevent double Movieclip class declaration when linking flash9 lib
	allow numerical operations on type parameters constraint by Float
	genswf9 : fixed dynamic inheritance

2008-02-23: 1.18
	some optimization and bugfix for as3 codegen
	bugfix : allow bitmaps and fonts classes for F9 library
	bugfix : neko.Web.setCookie
	bugfix : as3 switches in -swf-lib, and enable to "repair" corrupted as3 bytecode
	fixed --i return value in flash9
	fixed some transforms in flash9
	added js.Selection
	simplified js.Dom (more events)
	added haxe.xml.Fast.innerHTML
	added Reflect.compare
	fixed "".split() in Neko (now returns [""] instead of [])
	bugfix for swf-lib f9 classes ordering
	added EReg.customReplace
	added neko.Lib.lazyLoad and improved neko.net.Poll for Neko 1.6.1
	prevented static fields in interfaces