@@ -30,8 +30,10 @@ package haxe.io;
 enum Error {
 	/** The IO is set into nonblocking mode and some data cannot be read or written **/
 	Blocked;
-	/** An operation is outside of its valid range **/
+	/** An integer value is outside its allowed range **/
 	Overflow;
+	/** An operation on Bytes is outside of its valid range **/
+	OutsideBounds;
 	/** Other errors **/
 	Custom( e : Dynamic );
 }
